--- a/Views/Servicios/Turnos.cshtml
+++ b/Views/Servicios/Turnos.cshtml
@@ -64,6 +64,7 @@
                     <textarea name="Motivo" id="BarraDeMotivo" class="form-control" rows="3"></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Aceptar</button>
+                <a class="btn btn-danger" asp-controller="Home" asp-action="Index">Cancelar</a>
             </form>
         </div>
         <script src="~/js/MisScripts.js"></script>
