--- a/Views/Servicios/Servicios.cshtml
+++ b/Views/Servicios/Servicios.cshtml
@@ -20,14 +20,14 @@
                         <li>• Pruebas de esfuerzo</li>
                         <li>• Control de hipertensión</li>
                     </ul>
-                    <a href="#" class="btn btn-primary">Sacar Turno</a>
+                    <a asp-controller="Servicios" asp-action="AsignarEspecialidadTurno"  class="btn btn-primary">Sacar Turno</a>
                 </div>
             </div>
         </div>
 
         <div class="col-md-4 text-center">
             <div class="card">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRoFfX8PLHeICYd2OnSDAr5nxKNEc8mmZVoqA&s" class="card-img-top" alt="Dermatología" style="height: 200px; object-fit: cover;">
+                <img src="https://www.esneca.lat/wp-content/uploads/dermatologia-estetica.png" class="card-img-top" alt="Dermatología" style="height: 200px; object-fit: cover;">
                 <div class="card-body">
                     <h5 class="card-title">Dermatología</h5>
                     <p class="card-text">Atendemos diversas afecciones de la piel y tratamientos estéticos.</p>
@@ -38,7 +38,7 @@
                         <li>• Dermatología estética</li>
                         <li>• Biopsias de piel</li>
                     </ul>
-                    <a href="#" class="btn btn-primary">Sacar Turno</a>
+                    <a asp-controller="Servicios" asp-action="AsignarEspecialidadTurno"  class="btn btn-primary">Sacar Turno</a>
                 </div>
             </div>
         </div>
@@ -56,7 +56,7 @@
                         <li>• Tratamiento de enfermedades comunes</li>
                         <li>• Chequeos de desarrollo</li>
                     </ul>
-                    <a href="#" class="btn btn-primary">Sacar Turno</a>
+                    <a asp-controller="Servicios" asp-action="AsignarEspecialidadTurno"  class="btn btn-primary">Sacar Turno</a>
                 </div>
             </div>
         </div>
