--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@
         <!-- Servicio 2 -->
         <div class="col-lg-4 col-md-6">
             <div class="card shadow-sm h-100">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRoFfX8PLHeICYd2OnSDAr5nxKNEc8mmZVoqA&s" class="card-img-top" alt="Servicio Dermatología" style="height: 250px; object-fit: cover;">
+                <img src="https://www.esneca.lat/wp-content/uploads/dermatologia-estetica.png" class="card-img-top" alt="Servicio Dermatología" style="height: 250px; object-fit: cover;">
                 <div class="card-body text-center">
                     <h5 class="card-title">Dermatología</h5>
                     <p class="card-text">Evaluación y tratamiento de afecciones de la piel, cabello y uñas, asegurando salud y estética.</p>
