--- a/Views/Servicios/Servicios.cshtml
+++ b/Views/Servicios/Servicios.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "Servicios";
     Layout = "~/Views/Shared/_Layout.cshtml";
+
 }
 
 <div class="container mt-5">
@@ -20,7 +21,7 @@
                         <li>• Pruebas de esfuerzo</li>
                         <li>• Control de hipertensión</li>
                     </ul>
-                    <a asp-controller="Servicios" asp-action="AsignarEspecialidadTurno"  class="btn btn-primary">Sacar Turno</a>
+                    <a asp-controller="Servicios" asp-action="Turnos"  class="btn btn-primary">Sacar Turno</a>
                 </div>
             </div>
         </div>
@@ -38,7 +39,7 @@
                         <li>• Dermatología estética</li>
                         <li>• Biopsias de piel</li>
                     </ul>
-                    <a asp-controller="Servicios" asp-action="AsignarEspecialidadTurno"  class="btn btn-primary">Sacar Turno</a>
+                    <a asp-controller="Servicios" asp-action="Turnos"  class="btn btn-primary">Sacar Turno</a>
                 </div>
             </div>
         </div>
@@ -56,7 +57,7 @@
                         <li>• Tratamiento de enfermedades comunes</li>
                         <li>• Chequeos de desarrollo</li>
                     </ul>
-                    <a asp-controller="Servicios" asp-action="AsignarEspecialidadTurno"  class="btn btn-primary">Sacar Turno</a>
+                    <a asp-controller="Servicios" asp-action="Turnos"  class="btn btn-primary">Sacar Turno</a>
                 </div>
             </div>
         </div>
