--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@{
+    var Admin = ViewData["Admin"] != null ? Convert.ToInt32(ViewData["Admin"]) : (int?)null;
+}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -20,18 +22,47 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" asp-controller="Home" asp-action="Index">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-controller="Servicios" asp-action="Servicios">Servicios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-controller="Home" asp-action="RedirigirContactos">Contacto</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-controller="Home" asp-action="Perfil" >Perfil</a>
-                        </li>
+                        @if(Admin == 0)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Home" asp-action="Index">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Servicios" asp-action="Servicios">Servicios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Home" asp-action="RedirigirContactos">Contacto</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Home" asp-action="Perfil">Perfil</a>
+                            </li>
+                        }else if(Admin == 1)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="AdminMedicos" asp-action="Inicio">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="AdminMedicos" asp-action="Index">Administrar Medicos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" style="color:red" asp-controller="Home" asp-action="CerrarSesion">Cerrar sesion</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Home" asp-action="Index">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Servicios" asp-action="Servicios">Servicios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Home" asp-action="RedirigirContactos">Contacto</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" style="color:seagreen" asp-controller="Home" asp-action="Login">Iniciar Sesion</a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
