--- a/Views/AdminMedicos/AgregarMedico.cshtml
+++ b/Views/AdminMedicos/AgregarMedico.cshtml
@@ -30,6 +30,15 @@
                         <input name="Contacto" style="width:150px" class="form-control" value="" required />
                     </div>
 
+                    <div class="col">
+                        <label class="form-label">Email</label>
+                        <input name="Email" style="width:180px" class="form-control" value="" required />
+                    </div>
+
+                    <div class="col">
+                        <label class="form-label">Clave</label>
+                        <input name="Clave" style="width:130px" class="form-control" value="" required />
+                    </div>
                     <br />
                     <div class="col">
                         <label class="form-label">Especialidad</label>
