--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -28,7 +28,7 @@
                 @if (ViewData["Mensaje"] != null)
                 {
                     <div class="alert alert-danger" role="alert">
-                        @ViewData["Mensaje"];
+                        @ViewData["Mensaje"]
                     </div>
                 }
                  Aun no tienes cuenta? <a asp-controller="Home" asp-action="Registrarse" >Registrarse</a>
