--- a/Views/AdminMedicos/Devolucion.cshtml
+++ b/Views/AdminMedicos/Devolucion.cshtml
@@ -12,7 +12,7 @@
             <img src="https://osperyh.org.ar/wp-content/uploads/2023/12/turnos-medicos.jpg" style="object-fit: cover; width: 100%; height: 200px;" alt="Error" />
         </div>
         <div class="card-body">
-            <form asp-controller="AdminMedicos" asp-action="Devolucion">
+            <form asp-controller="AdminMedicos" asp-action="Devolucion" method="post" onsubmit="return IngresarDevolucion()">
                 <div class="row row-cols-1 row-cols-md-3 g-4">
                     <input name="Id" style="width:150px" type="hidden" value="@Model.Id" readonly />
                     <div class="col">
@@ -42,10 +42,12 @@
                     <textarea name="Motivo" id="BarraDeMotivo" class="form-control" rows="2" readonly>@Model.Motivo</textarea>
                 </div>
                 <div class="mb-3"></div>
+
                 <div class="mb-3">
                     <label class="form-label">Devolucion</label>
-                    <textarea name="Devolucion" id="BarraDeMotivo" class="form-control" rows="3"></textarea>
+                    <textarea name="Devolucion" id="Devolucion" class="form-control" rows="3" required ></textarea>
                 </div>
+
                 <button type="submit" class="btn btn-primary">Aceptar</button>
                 <a class="btn btn-danger" asp-controller="AdminMedicos" asp-action="Inicio">Cancelar</a>
             </form>
