--- a/Views/AdminMedicos/EditarMedico.cshtml
+++ b/Views/AdminMedicos/EditarMedico.cshtml
@@ -34,6 +34,15 @@
                         <input name="Contacto" style="width:150px" class="form-control" value="@medico.Contacto" required />
                     </div>
 
+                    <div class="col">
+                        <label class="form-label">Email</label>
+                        <input name="Email" style="width:180px" class="form-control" value="@medico.Email" required />
+                    </div>
+
+                    <div class="col">
+                        <label class="form-label">Clave</label>
+                        <input name="Clave" style="width:130px" class="form-control" value="@medico.Clave" required />
+                    </div>
                     <br />
                     <div class="col">
                         <label class="form-label">Especialidad</label>
