--- a/Views/Home/Registrarse.cshtml
+++ b/Views/Home/Registrarse.cshtml
@@ -5,9 +5,9 @@
 
 }
 
+<br />
 
-<div class="row row-cols-1 row-cols-md-3 g-4">
-    <div class="col" style="width:400px"></div>
+<div class="row row-cols-1 row-cols-md-3 g-4" style=" display:flex; justify-content:center; align-items:center"> 
     <div class="card h-100" style="width:600px">
         <div class="card" style="top:10px;background:#b4c5e4; height:90px; display:flex;justify-content:center;align-items:center">
             <label style="font-size:50px; color:aliceblue">Registrarse</label>
@@ -43,7 +43,7 @@
                 }
                 <br />
                 <br />
-                Ya tienes cuenta? <a asp-controller="Home" asp-action="Login" >Inicar Sesion</a>
+                Ya tienes cuenta? <a asp-controller="Home" asp-action="Login" >Iniciar Sesion</a>
                
             </form>
         </div>
